--- a/app/assets/stylesheets/components/_cards_incident.scss
+++ b/app/assets/stylesheets/components/_cards_incident.scss
@@ -15,19 +15,16 @@
     opacity:0.8;
   }
 }
-
-.cards {
-  display: flex;
-  // display: grid;
-  // grid-template-columns: 1fr 1fr 1fr;
-  // grid-gap: 16px;
-}
 .card-incident {
   flex: 1 0 1%;
   margin-right: 10px;
   &:last-child {
     margin-right: 0;
   }
+}
+
+.cards {
+  display: flex;
 }
 
 // Smallest device
@@ -62,5 +59,19 @@
 @media (min-width: 1200px) {
   .cards {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+/* INCIDENT RESULT */
+.incident-result {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  background-color: white;
+
+  p {
+    margin-left: 15px;
   }
 }
