--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,4 +1,5 @@
 // Import page-specific CSS files here.
-@import "home";
 @import "dashboard";
+@import "home";
+@import "incident_result";
 @import "workers";
