--- a/app/views/workers/index.html.erb
+++ b/app/views/workers/index.html.erb
@@ -5,31 +5,7 @@
   <ul class="">
     <% @workers.each_with_index do |worker, idx| %>
       <li>
-        <div data-worker-id="<%= worker.id %>" class="card-worker mt-3">
-          <% if current_user.flats.present? %>
-          <div id="<%= worker.id %>">
-            <%= render 'user_workers/worker_favorite', worker: worker %>
-          </div>
-          <% end %>
-          <div class="worker-photo">
-            <%= cl_image_tag worker.photos.first.key, crop: :thumb, width: 190, height: 280 %>
-          </div>
-          <div class="worker-description">
-            <h2><%= worker.name %></h2>
-            <h4>Catégorie : <%= worker.categories %></h4>
-            <h3><i class="fas fa-address-card"></i> : <%= worker.address %></h3>
-            <h3><i class="fas fa-envelope"></i> : <%= worker.email %></h3>
-            <h3><i class="fas fa-phone"></i> : <%= worker.phone %></h3>
-            <% if worker.description && worker.description.size > 180 %>
-              <p><%= worker.description.first(180) %><span class="show">... <%= link_to "Lire la suite", "" %></span ><span class="hide"><%= worker.description.last(-180) %> <%= link_to "Lire moins", "" %></span></p>
-            <% else %>
-              <p><%= worker.description %></p>
-            <% end %>
-            <button>Contacter</button>
-            <button>Voir plus</button>
-            <%= image_tag "p#{idx + 1}.jpg", alt: "alttext", class: 'avatar-bordered worker-avatar' %>
-          </div>
-        </div>
+        <%= render 'card_worker', worker: worker, idx: idx %>
       </li>
     <% end %>
   </ul>
