--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -1,4 +1,8 @@
-<%= simple_form_for incident do |f| %>
-  <%= f.input :answer, label: "#{decision[:question] unless decision[:question] == "Voulez-vous déclarer un incident ?"}", collection: decision[:answers], as: :radio_buttons %>
-  <%= f.submit "OK", class: "btn btn-primary d-none" %>
-<% end %>
+ <div class="container">
+  <%= simple_form_for Incident.new do |f| %>
+    <div class="col-8">
+    <%= f.input :answer, label: "#{decision[:question] unless decision[:question] == "Voulez-vous déclarer un incident ?"}", collection: decision[:answers], as: :radio_buttons %>
+    </div>
+    <%= f.submit "OK", class: "btn btn-primary d-none" %>
+  <% end %>
+ </div>
