--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,7 +1,4 @@
 
-<!-- conteneur général de toute la page -->
-<div class="picture-flat"></div>
-
 <div class="container">
 
   <!-- conteneur de la partie haute -->
@@ -54,11 +51,9 @@
             <span class="align-baseline"> <p> <%=incident.status%> <%=incident.date%> <%=incident.category%> </p></span>
           <% end %>
         </div>
-
       </div>
-
     </div>
-
+  </div>
   <!-- Partie haute dashboard loyer  -->
 
     <div class="upper-right d-flex flex-column">
