--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -127,15 +127,16 @@
 
 
   <!-- Partie basse des tuiles responsive -->
+  <!--
   <div class="container-incident">
     <h1>Déclarer un sinistre</h1>
 
-    <%= simple_form_for Incident.new, html:{id:"dashboard_new_incident"} do |f| %>
-      <%= f.input :answer, label: "", collection: @first_decision[:answers], label_method: lambda{ |answer| render "incident_category_card", incident_category: answer.first }, as: :radio_buttons %>
-      <%= f.submit "OK", class: "btn btn-primary d-none" %>
-    <% end %>
+    <%#= simple_form_for Incident.new, html:{id:"dashboard_new_incident"} do |f| %>
+      <%#= f.input :answer, label: "", collection: @first_decision[:answers], label_method: lambda{ |answer| render "incident_category_card", incident_category: answer.first }, as: :radio_buttons %>
+      <%#= f.submit "OK", class: "btn btn-primary d-none" %>
+    <%# end %>
   </div>
-
+-->
 
 <!--
     <div class="cards">
