--- a/app/views/pages/dashboard2.html.erb
+++ b/app/views/pages/dashboard2.html.erb
@@ -48,10 +48,10 @@
 
     <div class="col4">
       <div id="incident" class="product-container tabcontent ">
-        <div class="">
-          <p>INCIDENTS</p>
+        <div class="incident-history">
+          <h1>Historique d'incidents</h1>
           <% @incidents.each do |incident| %>
-          <span class="align-baseline"> <p> <%=incident.status%> <%=incident.date%> <%=incident.category%> </p></span>
+          <span class="align-baseline"> <p> <%=incident.category%> <%=incident.date%> <%=incident.status%> </p></span>
           <% end %>
         </div>
       </div>
