--- a/app/assets/stylesheets/pages/_dashboard2.scss
+++ b/app/assets/stylesheets/pages/_dashboard2.scss
@@ -54,6 +54,21 @@
   }
 }
 
+// historique incident
+
+.incident-history {
+  width: 110%;
+
+
+  h1{
+    color: white;
+    background-color: $hover-green;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+  }
+}
+
 // Import de dashboard 1
 
   h1{
