--- a/app/views/pages/dashboard2.html.erb
+++ b/app/views/pages/dashboard2.html.erb
@@ -47,7 +47,7 @@
     </div>
 
     <div class="col4">
-      <div id="incident" class="product-container tabcontent ">
+      <div id="incident">
         <div class="incident-history">
           <h1>Historique d'incidents</h1>
           <% @incidents.each do |incident| %>
