--- a/app/views/pages/_incident_category_card.html.erb
+++ b/app/views/pages/_incident_category_card.html.erb
@@ -1,3 +1,3 @@
-<div id="myBtn" class="card-incident" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), asset-url(<%= incident_category %>.svg)">
+<div id="myBtn" class="card-incident" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= image_path "#{incident_category.downcase}.svg" %>')">
   <%= incident_category %>
 </div>
