--- a/app/assets/stylesheets/components/_cards_incident.scss
+++ b/app/assets/stylesheets/components/_cards_incident.scss
@@ -5,10 +5,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: $dark-green;
   font-size: 24px;
-  font-weight: bold;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  // font-weight: bold;
+  // text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.5);
   &:hover {
