craquage sur le carousel

--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -1,4 +1,4 @@
- <div class="container">
+ <div class="container d-flex text-align-center">
   <%= simple_form_for Incident.new do |f| %>
     <div class="col-8">
     <%= f.input :answer, label: "#{decision[:question] unless decision[:question] == "Voulez-vous déclarer un incident ?"}", collection: decision[:answers], as: :radio_buttons %>
