--- a/app/views/pages/_carousel.html.erb
+++ b/app/views/pages/_carousel.html.erb
@@ -1,8 +1,7 @@
 |
 <% if @rental.photos %>
-<div class = "carousel-wrapper">
-
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <div class="container">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <% @rental.photos[0..-2].each_with_index do  |_photo, index| %>
@@ -38,7 +37,9 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-</div>
+
+  </div>
+
 <% end %>
 
 
