--- a/app/assets/stylesheets/pages/_dashboard2.scss
+++ b/app/assets/stylesheets/pages/_dashboard2.scss
@@ -266,3 +266,16 @@
     }
   }
 }
+
+.carousel{
+  width:100%;
+  height:400px;
+  background-color:#D7D7D7;
+  color:white;
+}
+
+
+.carousel-item {
+  margin: auto;
+  width:100%;
+}
