--- a/app/assets/stylesheets/pages/_dashboard2.scss
+++ b/app/assets/stylesheets/pages/_dashboard2.scss
@@ -70,17 +70,6 @@
 }
 
 // Import de dashboard 1
-
-  h1{
-    font-size: 30px;
-    color: $hover-green;
-  }
-
-  p {
-    text-align: justify;
-    // padding: 10px;}
-}
-
 .title {
   color: white;
   background-color: #357376;
@@ -268,14 +257,20 @@
 }
 
 .carousel{
-  width:100%;
-  height:400px;
+  width:60vw;
+  height:auto;
+  margin: 0 auto;
   background-color:#D7D7D7;
   color:white;
 }
-
-
-.carousel-item {
-  margin: auto;
-  width:100%;
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+img.carousel-img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
 }
