--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,14 +1,16 @@
 <div id="form" class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(https://images.unsplash.com/photo-1462899006636-339e08d1844e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80);">
   <div class="d-flex justify-content-center mt-n5">
-    <div>
-      <h3 class="text-light pb-4">Nouveau document</h3>
+    <div class="w-35">
+      <h3 class="text-light pb-4 ">Nouveau document</h3>
         <%= simple_form_for @document do |f| %>
           <%= f.input :name, placeholder: 'Nom du document', label: false %>
-          <%= f.input :date , as: :date, html5: true, label: false, :input_html => { :class => 'ml-0 mr-0' } %>
-          <%= f.input :file , label: false, :input_html => { :class => 'text-white' }%>
-          <%= f.submit "Créer", class: "btn btn-primary ml-0 text-white" %>
+          <%= f.input :date , placeholder: 'Date du document', label: false, as: :string, required: false, input_html: {class: "datepicker bg-white"} %>
+            <%= f.input :file, label: 'Choisir un fichier', label_html: {class: "btn btn-primary m-0 w-100", id: 'file-pick'},:input_html => { :class => 'text-white d-none m-0'}%>
+            <div class="mb-4"><span id="file-upload-value" class="text-white"></span></div>
+          <%= f.submit "Valider", class: "btn btn-primary ml-0 text-white w-100" %>
         <% end %>
       </div>
     </div>
   </div>
+
 
