design show incident

--- a/app/assets/stylesheets/components/_card_worker.scss
+++ b/app/assets/stylesheets/components/_card_worker.scss
@@ -1,7 +1,7 @@
 .card-worker {
   position: relative;
   display: flex;
-  width: 750px;
+  width: 100%;
   background: white;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
   transition: all 0.3s;
