--- a/app/assets/stylesheets/pages/_dashboard2.scss
+++ b/app/assets/stylesheets/pages/_dashboard2.scss
@@ -57,8 +57,8 @@
 // historique incident
 
 .incident-history {
-  width: 110%;
-
+    width: 113%;
+    margin-left: 15px;
 
   h1{
     color: white;
@@ -69,10 +69,14 @@
   }
 }
 
+.incident-details {
+  padding: 15px;
+}
+
 // Import de dashboard 1
 
   h1{
-    font-size: 30px;
+    font-size: 26px;
     color: $hover-green;
   }
 
@@ -274,8 +278,7 @@
   color:white;
 }
 
-
-.carousel-item {
-  margin: auto;
-  width:100%;
+.carousel-wrapper {
+    width: 73%;
+    margin: 0 auto;
 }
