--- a/app/assets/stylesheets/pages/_dashboard2.scss
+++ b/app/assets/stylesheets/pages/_dashboard2.scss
@@ -67,6 +67,16 @@
     border-radius: 5px;
     padding: 5px;
   }
+
+  p{
+    display:flex;
+    text-align: justify;
+    padding: 5px;
+  }
+}
+
+.incident-line {
+  display:flex;
 }
 
 // Import de dashboard 1
