changing fonts and imporving dashboard

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,8 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR|Noto+Serif&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap');
 // Define fonts for body and headers
-$body-font: 'Noto Sans KR', sans-serif;
-$headers-font: 'Noto Serif', serif;
+$body-font: 'Monserrat', sans-serif;
+$headers-font: 'Open Sans', sans-serif;
 
 
 
