--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -35,8 +35,15 @@
           </div>
         </div>
       </div>
+
       <div class="incident-left-down">
-        <button class="btn btn-lg btn-danger">Je répare moi-même</button>
+        <button class="btn btn-lg btn-danger" data-toggle="modal" data-target="#exampleModal">Je répare moi-même</button>
+
+
+
+
+
+
         <p>Ou bien je fais appel à un réparateur <i class="fas fa-arrow-right"></i></p>
       </div>
     </div>
@@ -68,4 +75,27 @@
   </div>
 </div>
 
+<!-- modale -->
+     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                Je valide l'incident
+                <button type="button" class="btn btn-primary">Save changes</button>
 
+
+
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
