--- a/app/assets/stylesheets/components/_cards_incident.scss
+++ b/app/assets/stylesheets/components/_cards_incident.scss
@@ -1,6 +1,7 @@
 .card-incident {
   background-size: cover;
   background-position: center;
+  // width: 140px;
   height: 140px;
   display: flex;
   justify-content: center;
@@ -9,10 +10,11 @@
   font-size: 24px;
   // font-weight: bold;
   // text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.5);
+  // border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
   &:hover {
     opacity:0.8;
+    cursor: pointer;
   }
 }
 .card-incident {
