--- a/app/assets/stylesheets/components/_cards_incident.scss
+++ b/app/assets/stylesheets/components/_cards_incident.scss
@@ -8,12 +8,14 @@
   align-items: center;
   color: $dark-green;
   font-size: 24px;
+  transition: 0.3s background-color ease-out;
   // font-weight: bold;
   // text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   // border-radius: 50%;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   &:hover {
-    opacity:0.8;
+    opacity:0.4;
+    transition: 0.3s background-color ease;
     cursor: pointer;
   }
 }
