Footer + Dashboard finalisation

--- a/app/views/pages/dashboard2.html.erb
+++ b/app/views/pages/dashboard2.html.erb
@@ -52,7 +52,7 @@
           <h1>Historique d'incidents</h1>
           <div class="table-description d-flex justify-content-between">
             <p>Catégorie</p>
-            <p class="text-align-center">Date</p>
+            <p class="date">Date</p>
             <p>Status</p>
           </div>
 
