--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,6 +7,7 @@
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
   margin-top: 20px;
+  border-top: 1px solid rgba(53, 115, 118, 0.3);
 }
 
 .footer-links {
