--- a/app/assets/stylesheets/pages/_dashboard2.scss
+++ b/app/assets/stylesheets/pages/_dashboard2.scss
@@ -1,6 +1,9 @@
 // .container {
 //   display:flex;
 // }
+.row {
+  margin: 0;
+}
 
 #appart2 {
   background-color: rgba(211,211,211,0.9);
@@ -77,9 +80,15 @@
 
   p{
     display:flex;
-    padding: 5px;
+    padding: 0px 15px;
+
   }
 }
+
+.date {
+    position: absolute;
+    left: 1027px;
+    }
 
 .incident-line {
   display:flex;
@@ -144,7 +153,6 @@
 //container des pdf
 
 .right-el {
-  width: 100%;
   height: 210px;
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
@@ -286,11 +294,19 @@
 }
 
 .carousel{
-  width:100%;
-  height:600px;
+  position: relative;
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
   margin: 0 auto;
   background-color:#D7D7D7;
   color:white;
+  .carousel-caption {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    bottom: 15%;
+    left: 50%;
+  }
 }
 
 .carousel-inner {
@@ -303,4 +319,8 @@ img.carousel-img {
   max-width: 100%;
   height: auto;
   object-fit: cover;
+}
+
+.carousel-wrapper {
+  padding: 12px;
 }
