--- a/app/assets/stylesheets/pages/_dashboard2.scss
+++ b/app/assets/stylesheets/pages/_dashboard2.scss
@@ -71,6 +71,7 @@
 
   h1{
     color: white;
+    font-size: 26px;
     background-color: $hover-green;
     text-align: center;
     border-radius: 5px 5px 0 0;
@@ -207,6 +208,7 @@
 
   h1 {
     color: white;
+    font-size: 26px;
     background-color: $hover-green;
     text-align: center;
     border-radius: 5px 5px 0 0;
