dashboard again modifié div inlinée

--- a/app/views/incidents/_incident_status.html.erb
+++ b/app/views/incidents/_incident_status.html.erb
@@ -1,7 +1,7 @@
 <% if incident.status.capitalize == "En cours" %>
-  <i class="fas fa-times-circle text-danger mb-3"></i>
+  <i class="fas fa-info-circle"></i>
   <p> <%=incident.status.capitalize%> </p>
 <% else %>
-  <i class="fas fa-check-circle text-success mb-3"></i>
+  <i class="fas fa-check-circle text-success"></i>
   <p> <%=incident.status.capitalize%> </p>
 <% end %>
