--- a/app/assets/stylesheets/pages/_dashboard2.scss
+++ b/app/assets/stylesheets/pages/_dashboard2.scss
@@ -6,18 +6,13 @@
 }
 
 #appart2 {
-  background-color: rgba(211,211,211,0.9);
-  position: relative;
-  margin-top: -180px;
-  border-radius: 8px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  transition: background-color 0.5s ease-out;
+  background-color: white;
+    position: relative;
+    margin-top: -180px;
+    border-radius: 8px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   // margin-right: 200px;
   // width:60%;
-  &:hover {
-  background-color: rgba(211,211,211,1);
-  transition: 0.5s background-color ease;
-  }
 }
 
 .loyers2.right-el {
@@ -46,7 +41,7 @@
   }
   .incident_answer {
     display: flex;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
       justify-content: space-between;
 
     .form-check {
@@ -67,32 +62,31 @@
 .incident-history {
     width: 100%;
     margin-left: 15px;
-     box-shadow: 0 0 5px rgba(0,0,0,0.2);
 
   h1{
-    color: white;
-    font-size: 26px;
-    background-color: $hover-green;
+    font-size: 22px;
+    color: #357376;
     text-align: center;
     border-radius: 5px 5px 0 0;
-    padding: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
+    border-bottom: 2px solid #357376;
+    padding: 6px 0;
+    font-weight: bolder;
+    letter-spacing: 1px;
   }
 
   p{
     display:flex;
-    padding: 0px 15px;
-
+    padding: 3px 10px;
+    margin-bottom: 0;
   }
 }
 
-.date {
-    position: absolute;
-    left: 1027px;
-    }
-
 .incident-line {
   display:flex;
+  align-items: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  margin-bottom: 10px;
 }
 
 .table-description {
@@ -106,20 +100,19 @@
 }
 
 // Import de dashboard 1
+.title{
 
-.title {
-  color: white;
-  background-color: #357376;
-  width: 100%;
-  padding-left: 15px;
-  border-bottom: solid 1px;
-  border-radius: 5px 5px 0 0;
 
   h1 {
-    margin-bottom: 2px;
-    font-size: 26px;
-    padding: 5px;
-    color: white;
+    font-size: 22px;
+    color: #357376;
+    text-align: center;
+    border-radius: 5px 5px 0 0;
+    margin-bottom: 15px;
+    border-bottom: 2px solid #357376;
+    padding: 6px 0;
+    font-weight: bolder;
+    letter-spacing: 1px;
   }
 }
 
@@ -156,19 +149,21 @@
 .right-el {
   height: 210px;
   border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+
 }
 
 .document-content {
   height: 150px;
   overflow: hidden;
   overflow-y: scroll;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 .loyers-content {
   height: 200px;
   overflow: hidden;
   overflow-y: scroll;
+
 }
 
 
@@ -207,13 +202,23 @@
   // margin-top: 70px;
 
   h1 {
-    color: white;
-    font-size: 26px;
-    background-color: $hover-green;
+    // color: white;
+    // font-size: 26px;
+    // background-color: $hover-green;
+    // text-align: center;
+    // border-radius: 5px 5px 0 0;
+    // padding: 5px;
+    // margin-bottom: 15px;
+
+    font-size: 22px;
+    color: #357376;
     text-align: center;
     border-radius: 5px 5px 0 0;
-    padding: 5px;
     margin-bottom: 15px;
+    border-bottom: 2px solid #357376;
+    padding: 6px 0;
+    font-weight: bolder;
+    letter-spacing: 1px;
   }
 }
 
