--- a/app/assets/stylesheets/pages/_dashboard2.scss
+++ b/app/assets/stylesheets/pages/_dashboard2.scss
@@ -5,10 +5,18 @@
   margin: 0;
 }
 
+.display-name {
+  h2 {
+    font-size: 30px;
+    color: $dark-green;
+    letter-spacing: 1px;
+  }
+}
+
 #appart2 {
   background-color: white;
     position: relative;
-    margin-top: -180px;
+    margin-top: -240px;
     border-radius: 8px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   // margin-right: 200px;
@@ -25,6 +33,18 @@
     overflow: hidden;
     overflow-y: scroll;
   }
+}
+
+.carac h1{
+    font-size: 22px;
+    color: #357376;
+    text-align: center;
+    border-radius: 5px 5px 0 0;
+    margin-bottom: 15px;
+    border-bottom: 2px solid #357376;
+    padding: 6px 0;
+    font-weight: bolder;
+    letter-spacing: 1px;
 }
 
 // form incidents
@@ -62,6 +82,7 @@
 .incident-history {
     width: 100%;
     margin-left: 15px;
+    margin-bottom: 40px;
 
   h1{
     font-size: 22px;
