--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -1,10 +1,10 @@
-<div class="container-fluid">
+<div class="container-fluid" style="margin-top: 90px;">
   <div class="incident-wrapper">
     <div class="incident-left">
       <div class="incident-left-upper">
         <!-- Display the result with all incident informations -->
         <div class="incident-result">
-            <h1 style="text-align: center;">Votre incident</h1>
+            <h1 style="text-align: center;">Déclaration de l'incident</h1>
             <div class="incident-description">
               <!-- Date -->
               <div class="incident-date d-flex">
@@ -38,13 +38,12 @@
             </div>
         </div>
       </div>
-
+<!--
       <div class="incident-left-down">
 
-        <button class="btn btn-lg btn-info" data-toggle="modal" data-target="#exampleModal">Je répare moi-même</button>
 
-        <p>Ou bien je fais appel à un réparateur <i class="fas fa-arrow-right"></i></p>
-      </div>
+        <p>Je déclare uniquement l'incident au propriètaire <i class="fas fa-arrow-right"></i></p>
+      </div> -->
     </div>
     <!-- Display the list of workers -->
     <div class="incident-right w-100">
