--- a/app/views/pages/dashboard2.html.erb
+++ b/app/views/pages/dashboard2.html.erb
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="row w-100">
     <div class="display-name d-flex col-6 mt-4">
-      <h2> Bonjour <%= current_user.full_name%> </h2>
+      <h1> <span id="name-typed-text" data-user="<%= current_user.full_name %>"></span> </h1>
     </div>
 
     <div class="col-4 offset-8">
