--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -98,7 +98,7 @@
                             <%= f.input :photos, as: :file, input_html: { multiple: true, :class => 'text-white d-none m-0'}, label: 'Ajoutez des photos ?', label_html: {class: "btn btn-primary m-0 w-100", id: 'file-pick2'}%>
 
                           </div>
-                          <div class="mb-4"><span id="file-upload-value" class="text-white"></span></div>
+                          <div class="mb-4 d-flex flex-column text-left" id="file-upload-value"></div>
                           <%= f.submit "Je valide l'incident", class: "btn btn-primary ml-0 text-white w-100" %>
                         <% end %>
                       </div>
