--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,10 @@
 @import "pages/index";
 
 
-
+// css des formulaires en modale
 .edit_incident {
+  width: 80% !important;
+}
+.new_document {
   width: 80% !important;
 }
