--- a/app/views/pages/dashboard2.html.erb
+++ b/app/views/pages/dashboard2.html.erb
@@ -83,7 +83,7 @@
           <% @last_rents.each do |rent| %>
           <div id="rent_<%= rent.id %>" class="rent-line">
             <div class="rent-date">
-              <%= rent.date.strftime('%B') %>
+               <%= I18n.l(rent.date,  format: '%B', locale: :'fr').capitalize %>
             </div>
             <div class="rent-amount">
               <%= @rental.loyer %> €
@@ -129,7 +129,8 @@
           <% end %>
         </div>
       </div>
-      <%= link_to "Ajouter un nouveau document", new_document_path, class: "btn btn-success w-100"  %>
+      <%#= link_to "Ajouter un nouveau document", new_document_path, class: "btn btn-success w-100"  %>
+       <button class="btn btn-success w-100" data-toggle="modal" data-target="#new_doc_modal">Demander une intervention</button>
 
       <% else %>
       <p>Pas de location en cours</p>
@@ -147,3 +148,45 @@
 
 <!-- Display error -->
 <%= render 'incidents/errors', incident: @incident %>
+
+
+
+
+
+
+
+
+<!-- modale Insert doc-->
+        <div class="modal fade" id="new_doc_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Importer un document</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div id="form" class="banner d-flex justify-content-center align-items-center" style="padding: 275px 0 ;background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(https://images.unsplash.com/photo-1462899006636-339e08d1844e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80);">
+                  <div class="d-flex justify-content-center" style="width:80%">
+                    <div class="w-100 text-center">
+                      <h3 class="text-light pb-4 ">Nouveau document</h3>
+                        <div class="container d-flex justify-content-center">
+                          <%= simple_form_for @document do |f| %>
+                            <%= f.input :name, placeholder: 'Nom du document', label: false %>
+                            <%= f.input :date , placeholder: 'Date du document', label: false, as: :string, required: false, input_html: {class: "datepicker bg-white"} %>
+                            <%= f.input :file, label: 'Choisir un fichier', label_html: {class: "btn btn-primary m-0 w-100", id: 'file-pick'},:input_html => { :class => 'text-white d-none m-0'}%>
+                            <div class="mb-4"><span id="file-upload-value" class="text-white"></span></div>
+                            <%= f.submit "Valider", class: "btn btn-info ml-0 text-white w-100" %>
+                          <% end %>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <div class="modal-footer">
+          </div>
+        </div>
+      </div>
+
