--- a/app/views/workers/_card_worker.html.erb
+++ b/app/views/workers/_card_worker.html.erb
@@ -31,7 +31,7 @@
       <p><%= worker.description %></p>
     <% end %>
     <!-- Call To Action  -->
-    <button class="btn btn-lg btn-info" data-toggle="modal" data-target="#exampleModal">Demander une intervention</button>
+    <button class="btn btn-lg btn-info" data-toggle="modal" data-target="#valid_incident_modal">Demander une intervention</button>
 
     <!-- Avatar -->
     <%= cl_image_tag worker.avatar.key, width: 150, height: 150, crop: :thumb, gravity: :face, class: 'avatar-bordered worker-avatar' if worker.avatar.attached? %>
