--- a/app/assets/stylesheets/components/_cards_incident.scss
+++ b/app/assets/stylesheets/components/_cards_incident.scss
@@ -2,7 +2,7 @@
   background-size: cover;
   background-position: center;
   // width: 140px;
-  height: 140px;
+  height: 120px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,7 +12,7 @@
   // font-weight: bold;
   // text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   // border-radius: 50%;
-  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  box-shadow: 2px 2px 8px rgba(0,0,0,0.2);
   &:hover {
     opacity:0.4;
     transition: 0.3s background-color ease;
@@ -21,14 +21,19 @@
 }
 #dashboard_new_incident2 .form-check {
   flex: 1 0 1%;
-  margin-right: 10px;
+  margin-right: 17px;
   &:last-child {
     margin-right: 0;
   }
 
+.card-incident p {
+  font-size: 18px;
 }
-.card-incident {
 
+}
+.icone {
+  padding: 5px;
+  margin-bottom: 10px;
 }
 
 .cards {
